--- a/dashboard.html
+++ b/dashboard.html
@@ -167,7 +167,7 @@
   <div id="addFuelForm" class="section">
     <h2>Add New Fuel Entry</h2>
     <form id="fuelForm" enctype="multipart/form-data">
-      <select id="fuelVehicleName" required onchange="updateFuelVehicleNumber()">
+      <select id="fuelVehicleName" required onchange="updateVehicleNumber()">
         <option value="">Select Vehicle</option>
       </select>
       <input type="text" id="fuelVehicleNumber" placeholder="Vehicle Number" readonly required>
