--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@ button:hover{
 	</div>
   
 
+
+	  <!-- Custom Popup Structure -->
+<div class="popup-overlay" id="customPopup">
+  <div class="popup-container">
+    <button class="popup-close" id="popupClose">&times;</button>
+    <h3 class="popup-title" id="popupTitle">Message</h3>
+    <div class="popup-message" id="popupMessage"></div>
+    <div class="popup-buttons">
+      <button class="popup-button" id="popupOk">OK</button>
+    </div>
+  </div>
+</div>
+	
   <script src="./js/app.js"></script>
 </body>
 </html>
