--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@ button:hover{
   </style>
 </head>
 <body>
+	<div class="loader-container" id="loader">
+    <div class="loader"></div>
+</div>
+	
     <div class="main">  	
 		<input type="checkbox" id="chk" aria-hidden="true">
 
