--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ button:hover{
 					<label for="chk" aria-hidden="true">Login</label>
 					 <input type="text" id="usernameInput" placeholder="Username" required>
         <input type="password" id="passwordInput" placeholder="Password" required>
-        <input type="button" onclick="checkClassicLogin()" value="Login">
+        <button type="button" onclick="checkClassicLogin()">Login</button>
 				</form>
 			</div>
 
@@ -184,7 +184,7 @@ button:hover{
 					 <input type="text" id="signupUsername" placeholder="Username" required>
         <input type="password" id="signupPassword" placeholder="Password" required>
         <input type="password" id="signupConfirmPassword" placeholder="Confirm Password" required>
-					<input type="button" onclick="signupUser()" value="Sign up">	
+					<button type="button" onclick="signupUser()">Sign up</button>	
 				</form>
 			</div>
 	</div>
