--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ button:hover{
 	  <!-- Custom Popup Structure -->
 <div class="popup-overlay" id="customPopup">
   <div class="popup-container">
-    <button class="popup-close" id="popupClose">&times;</button>
+    <div class="popup-close" id="popupClose">&times;</div>
     <h3 class="popup-title" id="popupTitle">Message</h3>
     <div class="popup-message" id="popupMessage"></div>
     <div class="popup-buttons">
