--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background: url(./img/travellogimg.png) no-repeat center center fixed;
+	background: url(./img/travellogimg3.png) no-repeat center center fixed;
 	background-size: cover;
 }
 .main{
