--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ button:hover{
   
 
 
-	  <!-- Custom Popup Structure -->
+	  <!-- Custom Popup  -->
 <div class="popup-overlay" id="customPopup">
   <div class="popup-container">
     <div class="popup-close" id="popupClose">&times;</div>
