--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
     </li>
   </ul>
 
-    <!-- Add this div for the logout button at  bottom -->
+    <!-- Add  div for the logout button at  bottom -->
   <div class="nav-footer">
     <a href="#" onclick="logout()" class="nav-item">
       <span class="material-symbols-outlined">logout</span>
