--- a/dashboard.html
+++ b/dashboard.html
@@ -48,7 +48,7 @@
     <li>
       <a href="#" onclick="event.preventDefault(); showSection('history')" class="nav-item">
         <span class="material-symbols-outlined">directions_car</span>
-        <span class="nav-text">History</span>
+        <span class="nav-text">Journeys</span>
       </a>
     </li>
   </ul>
@@ -69,7 +69,7 @@
 <div class="main-content">
 
   <div id="home" class="section active">
-    <h2>Pending Journeys</h2>
+    <h2>Active Journeys</h2>
     <div class="table-wrapper">
     <table class="fl-table" id="pendingTable">
         <thead>
@@ -106,7 +106,7 @@
   </div>
   
   <div id="addJourney" class="section">
-    <h2>Start New Journey</h2>
+    <h2>Log New Journey</h2>
     <form id="journeyForm">
       <select id="vehicleName" required onchange="updateVehicleNumber()">
         <option value="">Select Vehicle</option>
@@ -124,7 +124,7 @@
 
 
  <div id="fuel" class="section">
-  <h2>Fuel Entries</h2>
+  <h2>Fuel Tracker</h2>
   <div class="table-wrapper">
     <table class="fl-table" id="fuelTable">
       <thead>
@@ -164,7 +164,7 @@
 
   
   <div id="addFuelForm" class="section">
-    <h2>Add New Fuel Entry</h2>
+    <h2>New Fuel Record</h2>
     <form id="fuelForm" enctype="multipart/form-data">
       <select id="fuelVehicleName" required onchange="updateVehicleNumber()">
         <option value="">Select Vehicle</option>
@@ -192,7 +192,7 @@
 
 
  <div id="history" class="section">
-  <h2>Journey History</h2>
+  <h2>Journey Logs</h2>
    <div class="table-wrapper">
   <table class="fl-table" id="completedTripsTable">
     <thead>
