--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		/* NEW CSS FOR PASSWORD TOGGLE */
 .password-container {
   position: relative;
-  width: 60%;
-  margin: 10px auto;
+  width: 65%;
+  margin: 10px 20px;
 }
 
 .password-container input {
@@ -39,7 +39,7 @@
 
 .toggle-password {
   position: absolute;
-  right: 10px;
+  left: 25vh;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
