--- a/index.html
+++ b/index.html
@@ -247,6 +247,17 @@ button:hover{
   #chk:checked ~ .login {
     transform: translateY(-42%)
   }
+
+.password-container {
+  width: 65%;
+  margin: 10px 20px;
+}
+
+
+.toggle-password {
+ 
+  left: 25vh;
+}
 }
 
 @media only screen and (max-width: 400px) {
