--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ button:hover{
       
       if (input.type === "password") {
         input.type = "text";
-        toggle.textContent = "👁️";
+        toggle.textContent = "👁️‍🗨️";
       } else {
         input.type = "password";
         toggle.textContent = "👁️";
