--- a/dashboard.html
+++ b/dashboard.html
@@ -910,7 +910,7 @@ async function submitFuelEntry() {
     type: 'add-fuel-entry',
     fuelId:fuelId,
     driverId:driverData.id,
-    driverName:driverId,
+    driverName:driverData.name,
     vehicleNumber: vehicleNumber,
     vehicleName: vehicleName,
     date: date,
