--- a/dashboard.html
+++ b/dashboard.html
@@ -972,6 +972,10 @@ function generateFuelId() {
     </div>
   </div>
 </div>
+
+  <footer class="app-footer">
+  <p>© 2025 Travel Log App | Developed by <strong>R Sukrudha Ram</strong></p>
+</footer>
   
 </body>
 </html>
