--- a/index.html
+++ b/index.html
@@ -274,6 +274,19 @@ button:hover{
   }
 }
 
+
+		.credit {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 0.7rem;
+  color: rgba(255,255,255,0.7);
+}
+.credit span {
+  font-weight: bold;
+  color: white;
+}
+		
   </style>
 </head>
 <body>
@@ -332,6 +345,10 @@ button:hover{
       <button class="popup-button" id="popupOk">OK</button>
     </div>
   </div>
+</div>
+
+	<div class="credit">
+  <p>A project by <span>R Sukrudha Ram</span></p>
 </div>
 	
   <script src="./js/app.js"></script>
