--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@ button:hover{
 
 		.credit {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: -9px;
+  right: 5px;
   font-size: 0.7rem;
-  color: rgba(255,255,255,0.7);
+  color: #008ae6;
 }
 .credit span {
   font-weight: bold;
-  color: white;
+  color: #008ae6;
 }
 		
   </style>
