--- a/dashboard.html
+++ b/dashboard.html
@@ -825,10 +825,13 @@ function updateVehicleNumber() {
 ];
   const selectedName = document.getElementById('vehicleName').value;
   const fuelselectedName = document.getElementById('fuelVehicleName').value;
+   const serviceselectedName = document.getElementById('serviceVehicleName').value;
   const vehicle = vehicles.find(v => v.name === selectedName);
    const fuelvehicle = vehicles.find(v => v.name === fuelselectedName);
+  const servicevehicle = vehicles.find(v => v.name === serviceselectedName);
   document.getElementById('vehicleNumber').value = vehicle ? vehicle.number : '';
   document.getElementById('fuelVehicleNumber').value = fuelvehicle ? fuelvehicle.number : '';
+   document.getElementById('serviceVehicleNumber').value = servicevehicle ? servicevehicle.number : '';
 }
 
 
