--- a/dashboard.html
+++ b/dashboard.html
@@ -95,7 +95,7 @@
         </tr>
         </thead>
       <tbody id="journeys-table-body">
-        <!-- Data will be inserted here by JavaScript -->
+        <!-- Data will  inserted here by JavaScript -->
     </tbody>
     </table>
   </div>
