--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="./js/app.js"></script>
   <style>
-
+#driverName {
+    color: black !important;
+}
     /* ===== Base Styles ===== */
 body {
   font-family: 'Roboto', sans-serif;
