--- a/admin.html
+++ b/admin.html
@@ -716,12 +716,15 @@ body {
   .nav-toggle {
     display: none;
   }
+    .fl-table{
+      min-width:0px !important;
+    }
 }
   </style>
 </head>
 <body>
   <button class="mobile-menu-toggle" id="mobileMenuToggle" style="display: none;">
-  <span class="material-symbols-outlined">menu</span>
+  <span class="material-symbols-outlined" style="margin-left: -0.75rem;">menu</span>
 </button>
   
 <div class="loader-container" id="loader">
