--- a/admin.html
+++ b/admin.html
@@ -1089,7 +1089,7 @@ function showSection(sectionId) {
       break;
     case 'profile':
       navItems[5].classList.add('active');
-      getDriverProfile();
+     loadProfileData();
       break;
   }
 }
