--- a/admin.html
+++ b/admin.html
@@ -1441,7 +1441,7 @@ function viewJourneyDetails(journeyId) {
             <p><strong>Date:</strong> ${data.Date || ''}</p>
             <p><strong>Driver:</strong> ${data.DriverName || ''} (${data.DriverPhone || ''})</p>
             <p><strong>Vehicle:</strong> ${data.VehicleNumber || ''} (${data.VehicleName || ''})</p>
-            <p><strong>Status:</strong> ${getStatusBadge(data.status || '')}</p>
+            <p><strong>Status:</strong> ${getStatusBadge(data.Status || '')}</p>
             
             <h4>Journey Information</h4>
             <p><strong>Start Point:</strong> ${data.StartPoint || ''}</p>
