--- a/admin.html
+++ b/admin.html
@@ -431,7 +431,7 @@ body {
   color: #000;
 }
 
-.status-approved {
+.status-approved, .status-completed {
   background-color: #4CAF50;
   color: white;
 }
