--- a/admin.html
+++ b/admin.html
@@ -636,7 +636,7 @@ body {
 .app-footer {
   position: fixed;
   bottom: 0;
-  left: 72px;
+  left: -1rem;
   right: 0;
   text-align: center;
   padding: 10px;
