--- a/admin.html
+++ b/admin.html
@@ -1388,7 +1388,7 @@ function viewRequestDetails(requestId) {
     .then(data => {
       if (data) {
         document.getElementById('requestId').value = requestId;
-        if(${data.Status} == "Approved"){
+        if(${data.Status || '' } == "Approved"){
            document.getElementById('approvalForm').style.display = 'none';
         }
         else{
