--- a/admin.html
+++ b/admin.html
@@ -244,7 +244,7 @@ body {
   background-color: #1976D2;
   color: white;
   padding: 12px 15px;
-  text-align: left;
+  text-align: center;
   font-weight: 500;
 }
 
