--- a/admin.html
+++ b/admin.html
@@ -597,7 +597,7 @@ body {
 #requestDetailsContent {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0px;
   padding: 15px;
   color: #333;
   background-color: #f9f9f9;
@@ -657,7 +657,7 @@ body {
 @media (min-width: 768px) {
   #requestDetailsContent {
     padding: 25px;
-    max-width: 800px;
+    max-width: 700px;
   }
   
   .request-details {
@@ -689,13 +689,7 @@ body {
     grid-column: 1;
   }
   
-  .request-details > p:nth-of-type(6),
-  .request-details > p:nth-of-type(7),
-  .request-details > p:nth-of-type(8),
-  .request-details > p:nth-of-type(9),
-  .request-details > p:nth-of-type(10) {
-    grid-column: 2;
-  }
+ 
   
   /* Passenger section spans full width */
   .request-details > p:nth-of-type(11),
