--- a/admin.html
+++ b/admin.html
@@ -690,7 +690,12 @@ body {
   .request-details > p:nth-of-type(2),
   .request-details > p:nth-of-type(3),
   .request-details > p:nth-of-type(4),
-  .request-details > p:nth-of-type(5) {
+  .request-details > p:nth-of-type(5),
+  .request-details > p:nth-of-type(6),
+  .request-details > p:nth-of-type(7),
+  .request-details > p:nth-of-type(8),
+  .request-details > p:nth-of-type(9),
+  .request-details > p:nth-of-type(10){
     grid-column: 1;
   }
   
