--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/png" href="./img/travelicon.png">
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="css/style.css" />
+   <link rel="stylesheet" href="css/general.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
