--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="icon" type="image/png" href="./img/travelicon.png">
   	<title>Travel Log Login</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+	 <link rel="stylesheet" href="css/general.css" />
 	<!-- Firebase SDKs -->
   	<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   	<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
@@ -49,87 +50,7 @@
 
 /* END OF NEW CSS */
 
-	   
-  .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s ease;
-  }
-  
-  .popup-overlay.active {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .popup-container {
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    width: 90%;
-    max-width: 400px;
-    padding: 20px;
-    position: relative;
-    transform: translateY(20px);
-    transition: transform 0.3s ease;
-  }
-  
-  .popup-overlay.active .popup-container {
-    transform: translateY(0);
-  }
-  
-  .popup-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-    color: #666;
-  }
-  
-  .popup-title {
-    margin-top: 0;
-    margin-bottom: 15px;
-    color: #333;
-    font-size: 20px;
-  }
-  
-  .popup-message {
-    margin-bottom: 20px;
-    color: #555;
-    line-height: 1.5;
-  }
-  
-  .popup-buttons {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .popup-button {
-    padding: 8px 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.3s;
-  }
-  
-  .popup-button:hover {
-    background-color: #45a049;
-  }
+
 .main{
 	width: 350px;
 	height: 500px;
