--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 .password-container input {
   width: 100%;
-  margin: 0;
+  margin: 10px;
   padding-right: 30px; /* Space for the eye icon */
 }
 
@@ -159,9 +159,9 @@ button:hover{
   }
   
   .login {
-    height: 450px;
+    height: 87vh;
     padding-bottom: 20px;
-	transform: translateY(200px);
+	transform: translateY(275px);
   }
   
   #chk:checked ~ .login {
@@ -169,14 +169,14 @@ button:hover{
   }
 
 .password-container {
-  width: 65%;
-  margin: 10px 20px;
+          width: 67%;
+        margin: 10px 29px;
 }
 
 
 .toggle-password {
  
-  left: 25vh;
+  left: 30vh;
 }
 }
 
@@ -222,6 +222,10 @@ button:hover{
 
 .valid {
   border: 1px solid #00C851 !important;
+}
+
+#signupForm{
+margin-top:4rem;
 }
 		
   </style>
