--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 .password-container input {
   width: 100%;
-  margin: 10px;
+  margin: 1px;
   padding-right: 30px; /* Space for the eye icon */
 }
 
@@ -167,6 +167,10 @@ button:hover{
   #chk:checked ~ .login {
     transform: translateY(-42%)
   }
+
+.password-container input {
+  margin: 10px;
+}
 
 .password-container {
           width: 67%;
