--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 .main{
 	width: 350px;
-	height: 500px;
+   	 height: 570px;
 	background-color: #ADD8E6;
 	overflow: hidden;
 	border-radius: 10px;
@@ -113,7 +113,7 @@ button:hover{
 	height: 460px;
 	background: white;
 	border-radius: 60% / 10%;
-	transform: translateY(-60px);
+	transform: translateY(-19vh);
 	transition: .8s ease-in-out;
 }
 .login label{
@@ -122,7 +122,7 @@ button:hover{
 }
 
 #chk:checked ~ .login{
-	transform: translateY(-130px);
+	transform: translateY(-75px);
 }
 #chk:checked ~ .login label{
 	transform: scale(1);	
