--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ button:hover{
 	background: #6d44b8;
 }
 .login{
-	height: 460px;
+	height: 530px;
 	background: white;
 	border-radius: 60% / 10%;
 	transform: translateY(-19vh);
@@ -122,7 +122,7 @@ button:hover{
 }
 
 #chk:checked ~ .login{
-	transform: translateY(-75px);
+	transform: translateY(-84vh);
 }
 #chk:checked ~ .login label{
 	transform: scale(1);	
@@ -168,9 +168,7 @@ button:hover{
     transform: translateY(-42%)
   }
 
-.password-container input {
-  margin: 10px;
-}
+
 
 .password-container {
           width: 67%;
