--- a/admin.html
+++ b/admin.html
@@ -628,7 +628,7 @@ background-color: #2ecc71;
 }
     
    /* Base Styles (Mobile First) */
-#requestDetailsContent {
+#requestDetailsContent,#driverDetailsContent {
   
     padding-top: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -691,7 +691,7 @@ background-color: #2ecc71;
 
 /* Desktop Styles */
 @media (min-width: 768px) {
-  #requestDetailsContent {
+  #requestDetailsContent,#driverDetailsContent {
     padding: 25px;
     max-width: 700px;
   }
@@ -742,7 +742,7 @@ background-color: #2ecc71;
 
 /* Dark mode support */
 @media (prefers-color-scheme: dark) {
-  #requestDetailsContent {
+  #requestDetailsContent, #driverDetailsContent {
     background-color: #2c3e50;
     color: #ecf0f1;
   }
@@ -759,7 +759,6 @@ background-color: #2ecc71;
     .approval-form {
       margin-top: 20px;
       padding: 15px;
-      background-color: #e8f5e9;
       border-radius: 8px;
     }
 
