--- a/admin.html
+++ b/admin.html
@@ -1127,6 +1127,7 @@ background-color: #2ecc71;
           <option value="Active">Active</option>
           <option value="Pending">Pending</option>
           <option value="Hold">Hold</option>
+          <option value="Rejected">Rejected</option>
         </select>
       </div>
       
