--- a/admin.html
+++ b/admin.html
@@ -1569,7 +1569,7 @@ function loadDashboardStats() {
     fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=get-pending-request-count").then(res => res.json()),
     fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=get-pending-driver-count").then(res => res.json())
   ])
-  .then(([journeys, fuel, services, requests]) => {
+  .then(([journeys, fuel, services, requests, drivers]) => {
     document.getElementById('totalJourneys').textContent = journeys.count || 0;
     document.getElementById('totalFuel').textContent = fuel.count || 0;
     document.getElementById('totalServices').textContent = services.count || 0;
