--- a/dashboard.html
+++ b/dashboard.html
@@ -589,12 +589,7 @@ document.addEventListener('DOMContentLoaded', function() {
    // window.addEventListener('load', hideLoader);
   const driverId= driverData.id;
   fetch(`https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=pending-journeys&driverId=${encodeURIComponent(driverId)}`)
-    .then(response => {
-      if (!response.ok) {
-        throw new Error('Network response was not ok');
-      }
-      return response.json();
-    })
+    .then(response => response.json())
     .then(data => {
       console.log("Pending journeys data:", data);
       const tableBody = document.querySelector('#home tbody');
